changes on client and added keys class